# temple-guard-public

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  backup.sh  docker-compose.yml  install.sh  run.sh  start.sh  wontdo.md
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: __init__.py  bootstrap.py  config.py  database.py  main.py  models.py  schemas.py  seed.py  utils.py
backend/app/api/: routes.py
backend/app/core/: controls.py  jobs.py  kali.py  modules.py  playbooks.py  provisioner.py  redteam.py  remediation.py  reporting.py  runner.py  shell.py  standards.py
backend/docker/app-audit/: Dockerfile
backend/docker/kali/: Dockerfile
backend/docker/metasploit/: Dockerfile
cli/: README.md  pyproject.toml
cli/temple_guard/: __init__.py  apitest.py  checks.py  cli.py  clients.py  monitor.py  playbooks.py  recon_tools.py  report.py  strix.py  tools.py
desktop/: README.md  main.js  package.json
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  types.d.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/clients/: page.tsx
frontend/app/consoles/: page.tsx
frontend/app/containers/: page.tsx
frontend/app/engagements/: page.tsx
frontend/app/evidence/: page.tsx
frontend/app/playbooks/: page.tsx
frontend/components/: ClusterView.tsx  ScopeInput.tsx  SearchBox.tsx  Sidebar.tsx  StandardsPicker.tsx  TargetsPanel.tsx  Terminal.tsx  ui.tsx
frontend/lib/: api.ts  types.ts
scripts/: vpn-sidecar.sh
(+8 files in other folders)
