[project]
name = "temple-guard"
version = "0.5.0"
description = "Scan a web app you own and get a remediation report — interactive or agent-driven."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Temple Guard" }]
keywords = ["security", "self-assessment", "web", "remediation", "headers", "tls"]
dependencies = [
    "httpx>=0.24",
    "rich>=13.0",
    "typer>=0.9",
    "art>=6.1",
    "fpdf2>=2.7",
    "dnspython>=2.3",
]

[project.scripts]
temple-guard = "temple_guard.cli:app"

[project.urls]
Homepage = "https://github.com/DOlivertech/temple-guard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["temple_guard"]
